footer overflow fix

--- a/content/themes/ghost-mdl/dev/sass/screen.scss
+++ b/content/themes/ghost-mdl/dev/sass/screen.scss
@@ -1482,7 +1482,6 @@ body:not(.post-template) .post-title {
 .footer-secondary{
   padding:20px 20px 5px 20px;
   float: left;
-  width: 100%;
   clear:both;
 }
 
